compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@int_bin_negative.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"-0b01010101;\")"
---
SOURCE_FILE@0..12
  EXPR_STMT@0..12
    UNARY_EXPR@0..11
      SUB@0..1 "-"
      LIT_EXPR@1..11
        INTEGER_LIT@1..11
          INTEGER_LIT@1..11 "0b01010101"
    SEMICOLON@11..12 ";"
