compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@int_bin_positive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0b01010101;\")"
---
SOURCE_FILE@0..11
  EXPR_STMT@0..11
    LIT_EXPR@0..10
      INTEGER_LIT@0..10
        INTEGER_LIT@0..10 "0b01010101"
    SEMICOLON@10..11 ";"
