compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@int_hex_negative.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"-0x55;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    UNARY_EXPR@0..5
      SUB@0..1 "-"
      LIT_EXPR@1..5
        INTEGER_LIT@1..5
          INTEGER_LIT@1..5 "0x55"
    SEMICOLON@5..6 ";"
