compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@int_positive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"55;\")"
---
SOURCE_FILE@0..3
  EXPR_STMT@0..3
    LIT_EXPR@0..2
      INTEGER_LIT@0..2
        INTEGER_LIT@0..2 "55"
    SEMICOLON@2..3 ";"
