compiler/lume_parser/src/snapshots/lume_parser__tests__literal_snapshots@string_content.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"\\\"string\\\";\")"
---
SOURCE_FILE@0..9
  EXPR_STMT@0..9
    LIT_EXPR@0..8
      STRING_LIT@0..8
        STRING_LIT@0..8 "\"string\""
    SEMICOLON@8..9 ";"
