compiler/lume_parser/src/snapshots/lume_parser__tests__loop_snapshots@inf_loop_empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"loop { }\")"
---
[
    InfiniteLoop(
        InfiniteLoop {
            block: Block {
                statements: [],
                location: Location(
                    5..8,
                ),
            },
            location: Location(
                0..8,
            ),
        },
    ),
]
